--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,12 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : Janik313"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "janik.backup@gmail.com"
+  bio         : "I'm a Gamer, and code sometimes."
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
-
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+  twitter     : "Janik313"
+  reddit      : "Janik313"
+  
+  
