--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Janik313"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://janik313.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Janik313"
+description              : &description "A lazy gamer who codes sometimes."
+url                      : https://janik313.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "janik313/academicpages.github.io"
+repository               : "janik313/janik313.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,15 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Janik313"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "I'm a lazy gamer who's codes sometimes."
   location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  email            : "janik.backup@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,20 +92,19 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "janik313"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
+  steam            : "http://steamcommunity.com/id/janik313"
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "janik313"
   vine             :
   weibo            :
   xing             :
