--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Janik313"
   avatar           : "profile.png"
-  bio              : "I'm a lazy gamer who's codes sometimes."
+  bio              : "I'm a lazy gamer who codes sometimes."
   email            : "janik.backup@gmail.com"
   uri              :
   bitbucket        :
