--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,7 @@ author:
   youtube          :
   wikipedia        :
   reddit           : "Janik313"
+  discord          : "Janik313#8994"
   
 
 
