--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Janik313"
   avatar           : "profile.png"
   bio              : "It's shitty code, but it's free code."
-  email            : "janik.backup@gmail.com"
+  email            : "janik.wyder.sek@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
