--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ social:
 # Analytics
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          :
+  google: "true"
+    tracking_id          : "UA-157295670-1"
 
 
 # Site Author
