--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : Janik313"
-  email       : "janik.backup@gmail.com"
+  email       : "janik.313@outlook.com"
   bio         : "I'm a Gamer, and code sometimes."
   avatar      : "bio-photo-2.jpg"
   twitter     : "Janik313"
