--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,13 @@ analytics:
 author:
   name             : "Janik313"
   avatar           : "profile.png"
-  bio              : "It's shitty code, but it's free code."
-  email            : "janik.wyder.sek@gmail.com"
+  bio              : ""
+  email            : 
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
+  discord          : "Janik313#8994"
   discord          : "Janik313#8994"
   flickr           :
   facebook         :
